--- a/libeventTest.vcxproj
+++ b/libeventTest.vcxproj
@@ -88,7 +88,9 @@
     <ClInclude Include="Net\NetConnection.h" />
     <ClInclude Include="Net\NetDefine.h" />
     <ClInclude Include="Net\NetManager.h" />
+    <ClInclude Include="Net\Packet.h" />
     <ClInclude Include="Net\SocketAPI.h" />
+    <ClInclude Include="Net\SocketStream.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -98,6 +100,7 @@
     <ClCompile Include="Net\CSocket.cpp" />
     <ClCompile Include="Net\NetManager.cpp" />
     <ClCompile Include="Net\SocketAPI.cpp" />
+    <ClCompile Include="Net\SocketStream.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
