--- a/libeventTest.vcxproj.filters
+++ b/libeventTest.vcxproj.filters
@@ -71,5 +71,8 @@
     <ClCompile Include="Net\SocketStream.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Net\NetConnection.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
