--- a/libeventTest.vcxproj
+++ b/libeventTest.vcxproj
@@ -84,6 +84,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Net\Address.h" />
+    <ClInclude Include="Net\ConnectionManager.h" />
     <ClInclude Include="Net\CSocket.h" />
     <ClInclude Include="Net\NetConnection.h" />
     <ClInclude Include="Net\NetDefine.h" />
@@ -91,17 +92,20 @@
     <ClInclude Include="Net\Packet.h" />
     <ClInclude Include="Net\SocketAPI.h" />
     <ClInclude Include="Net\SocketStream.h" />
+    <ClInclude Include="Net\TCPServer.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="libeventTest.cpp" />
     <ClCompile Include="Net\Address.cpp" />
+    <ClCompile Include="Net\ConnectionManager.cpp" />
     <ClCompile Include="Net\CSocket.cpp" />
     <ClCompile Include="Net\NetConnection.cpp" />
     <ClCompile Include="Net\NetManager.cpp" />
     <ClCompile Include="Net\SocketAPI.cpp" />
     <ClCompile Include="Net\SocketStream.cpp" />
+    <ClCompile Include="Net\TCPServer.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
